--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Title</title>
+		<title>TN lectures (Paris 2023)</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -17,10 +17,14 @@
 		<div class="reveal">
 			<div class="slides">
 				<script src="js/add_video_slide.js" slide_scene="Title"></script>
-				<script src="js/add_video_slide.js" slide_scene="Slide1"></script>
-				<script src="js/add_video_slide.js" slide_scene="Slide2"></script>
-				<script src="js/add_video_slide.js" slide_scene="Slide3"></script>
-				<script src="js/add_video_slide.js" slide_scene="Conclusion"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_1"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_2"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_3"></script>
+				<!-- <script src="js/add_video_slide.js" slide_scene="Lec2_1"></script> -->
+				<!-- <script src="js/add_video_slide.js" slide_scene="Lec2_2"></script> -->
+				<!-- <script src="js/add_video_slide.js" slide_scene="Lec2_3"></script> -->
+				<!-- <script src="js/add_video_slide.js" slide_scene="Lec3_1"></script> -->
+				<!-- <script src="js/add_video_slide.js" slide_scene="Lec3_2"></script> -->
 			</div>
 		</div>
 
@@ -29,19 +33,19 @@
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
 		<script>
-		
+
 			const isMobile = /(iphone|ipod|ipad|android)/gi.test( navigator.userAgent ) ||
 				( navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1 ); // iPadOS
-				
+
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: false,
 				transition: 'none',
-				backgroundTransition: 'none',	
-				progress: false,	
-				autoPlayMedia: false,	
+				backgroundTransition: 'none',
+				progress: false,
+				autoPlayMedia: false,
 				controls: isMobile,
 				controlsLayout: 'edges',
 				// Learn about plugins: https://revealjs.com/plugins/
