--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<!-- <script src="js/add_video_slide.js" slide_scene="Title"></script> -->
-				<!-- <script src="js/add_video_slide.js" slide_scene="Lec1_1"></script> -->
-				<!-- <script src="js/add_video_slide.js" slide_scene="Lec1_2"></script> -->
-				<!-- <script src="js/add_video_slide.js" slide_scene="Lec1_3"></script> -->
+				<script src="js/add_video_slide.js" slide_scene="Title"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_1"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_2"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec1_3"></script>
 				<script src="js/add_video_slide.js" slide_scene="Lec2_1"></script>
 				<script src="js/add_video_slide.js" slide_scene="Lec2_2"></script>
 				<script src="js/add_video_slide.js" slide_scene="Lec2_3"></script>
