--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 				<script src="js/add_video_slide.js" slide_scene="Lec2_1"></script>
 				<script src="js/add_video_slide.js" slide_scene="Lec2_2"></script>
 				<script src="js/add_video_slide.js" slide_scene="Lec2_3"></script>
-				
-				<!-- <script src="js/add_video_slide.js" slide_scene="Lec3_1"></script> -->
-				<!-- <script src="js/add_video_slide.js" slide_scene="Lec3_2"></script> -->
+				<script src="js/add_video_slide.js" slide_scene="Lec3_1"></script>
+				<script src="js/add_video_slide.js" slide_scene="Lec3_2"></script>
 			</div>
 		</div>
 
